--- a/stopwatch/src/main/res/layout/activity_main.xml
+++ b/stopwatch/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             android:id="@+id/tv_minute"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="00"
+            android:text="@{main.minuteText}"
             android:textSize="45sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/tv_second"
             app:layout_constraintEnd_toStartOf="@+id/tv_second"
@@ -31,7 +31,7 @@
             android:id="@+id/tv_second"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=":00"
+            android:text="@{main.secondText}"
             android:textSize="45sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/tv_millisecond"
             app:layout_constraintEnd_toStartOf="@+id/tv_millisecond"
@@ -42,7 +42,7 @@
             android:id="@+id/tv_millisecond"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=".00"
+            android:text="@{main.milliSecText}"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/btn_refresh"
             app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +55,7 @@
             android:layout_width="100dp"
             android:layout_height="0dp"
             android:backgroundTint="@color/light_blue"
-            android:text="@string/start"
+            android:text="@{main.startText}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
