2022 04 21 by quantata - Simple Music Player - MainActivity.kt 에 서비스 연결. 간단한 뮤직 플레이어 구현

--- a/simplemusicplayer/src/main/res/layout/activity_main.xml
+++ b/simplemusicplayer/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/play"
+        android:onClick="onClick"
         app:layout_constraintBottom_toTopOf="@+id/btn_pause"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -24,6 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/pause"
+        android:onClick="onClick"
         app:layout_constraintBottom_toTopOf="@+id/btn_stop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -35,6 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/stop"
+        android:onClick="onClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
