--- a/todolist/src/main/res/layout/activity_add_todo.xml
+++ b/todolist/src/main/res/layout/activity_add_todo.xml
@@ -79,6 +79,7 @@
 
 
     <Button
+        android:id="@+id/btn_completion"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
